test/v3/fail/void_param01.v3
//@seman
class type_void04 {
	method test1(val: void) -> void {
		if ( test1(test2()) == test1(test2()) ) ;
	}
	method test2() { }
}
